docs/0.18.1/_sources/api/gammapy.modeling.models.SkyModel.rst.txt
SkyModel
========

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SkyModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyModel.covariance
      ~SkyModel.default_parameters
      ~SkyModel.evaluation_radius
      ~SkyModel.frame
      ~SkyModel.name
      ~SkyModel.parameters
      ~SkyModel.position
      ~SkyModel.spatial_model
      ~SkyModel.spectral_model
      ~SkyModel.tag
      ~SkyModel.temporal_model

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyModel.__call__
      ~SkyModel.copy
      ~SkyModel.create
      ~SkyModel.evaluate
      ~SkyModel.evaluate_geom
      ~SkyModel.from_dict
      ~SkyModel.from_parameters
      ~SkyModel.integrate_geom
      ~SkyModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: name
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: spatial_model
   .. autoattribute:: spectral_model
   .. autoattribute:: tag
   .. autoattribute:: temporal_model

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: to_dict
